Fix artifact upload

--- a/.github/workflows/ahk2exe.yml
+++ b/.github/workflows/ahk2exe.yml
@@ -23,4 +23,4 @@ jobs:
         uses: actions/checkout@v3
         with:
           name: custom-hotkeys.exe
-          files: custom-hotkeys.exe
+          path: custom-hotkeys.exe
